{
    "name": "InputManager",
    "maps": [
        {
            "name": "Main",
            "id": "0d125edf-7dce-432e-bffa-5bc3b4cd05c5",
            "actions": [
                {
                    "name": "MoveToNext",
                    "type": "Button",
                    "id": "9be8459a-b0bf-429d-917d-3a52e059e0ac",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveToPrevious",
                    "type": "Button",
                    "id": "0d4feefb-b2c0-44a9-9a90-f20fa81515e5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "EnablePhysics",
                    "type": "Button",
                    "id": "a3fe5b74-2c1e-4c01-be66-7a426af0e668",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "69766dbf-9482-4d38-8f7e-8140a2d38655",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveToNext",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bbdad10b-9119-4608-a2f7-a16f2bab6ab4",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveToPrevious",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1c69d935-05aa-429c-aa91-bbf902901c62",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EnablePhysics",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}